--- a/index.html
+++ b/index.html
@@ -179,5 +179,8 @@
       }
     }
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7723689755297651"
+     crossorigin="anonymous"></script>
 </body>
 </html>
+
