--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     <div style="margin-top: 20px;">
       <ins class="adsbygoogle"
            style="display:block"
-           data-ad-client="ca-pub-xxxxxxxxxxxxxxxx"
-           data-ad-slot="yyyyyyyyyy"
+           data-ad-client="ca-pub-7723689755297651"
+           data-ad-slot="6475259413"
            data-ad-format="auto"
            data-full-width-responsive="true"></ins>
       <script>
@@ -239,3 +239,4 @@
   </script>
 </body>
 </html>
+
